Adds Live Share extension in `devcontainer.json`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,8 @@
 				"GitHub.copilot",
 				"GitHub.copilot-chat",
 				"bierner.github-markdown-preview",
-				"VisualStudioExptTeam.vscodeintellicode"
+				"VisualStudioExptTeam.vscodeintellicode",
+				"ms-vsliveshare.vsliveshare"
 			]
 		}
 	}
