--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
 				"GitHub.copilot-chat",
 				"bierner.github-markdown-preview",
 				"VisualStudioExptTeam.vscodeintellicode",
-				"ms-vsliveshare.vsliveshare"
+				"ms-vsliveshare.vsliveshare",
+				"EditorConfig.EditorConfig"
 			]
 		}
 	}
