Add Git LFS to the devcontainer
Converts it all to a Dockerfile for quick setup and to show the Binary
files, replacing the pointer files.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,9 @@
 {
 	"name": "F20CN Container",
-	"image": "mcr.microsoft.com/devcontainers/python:3",
+	"build": {
+		"dockerfile": "Dockerfile"
+	},
+	// "image": "mcr.microsoft.com/devcontainers/python:3",
 	"customizations": {
 		"vscode": {
 			"extensions": [
