Updates `devcontainer.json` with new PDF extension
One that will run on GitHub Codespaces

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 				"eamodio.gitlens",
 				"ms-python.python",
 				"vscode-icons-team.vscode-icons",
-				"tomoki1207.pdf",
+				"mathematic.vscode-pdf",
 				"njpwerner.autodocstring",
 				"aaron-bond.better-comments",
 				"GitHub.copilot",
