Added settings for `diffEditor`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,6 @@
 	"[python]": {
 		"editor.rulers": [100]
 	},
+	"diffEditor.ignoreTrimWhitespace": false,
+	"diffEditor.hideUnchangedRegions.enabled": true,
 }
