Add Python interpreter path to `devcontainer.json`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,7 +35,10 @@
 				"VisualStudioExptTeam.vscodeintellicode",
 				"ms-vsliveshare.vsliveshare",
 				"EditorConfig.EditorConfig"
-			]
+			],
+			"settings": {
+				"python.defaultInterpreterPath": "/usr/local/bin/python"
+			}
 		}
 	},
 	"postStartCommand": "git lfs checkout"
