--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,19 +6,10 @@
 	},
 	// "image": "mcr.microsoft.com/devcontainers/python:3",
 	"features": {
-		"ghcr.io/devcontainers/features/common-utils:2":{
-            "installZsh": "true",
-            "username": "group-14",
-            "userUid": "1000",
-            "userGid": "1000",
-            "upgradePackages": "true"
-        },
-        "ghcr.io/devcontainers/features/python:1": "none",
-        "ghcr.io/devcontainers/features/node:1": "none",
-        "ghcr.io/devcontainers/features/git:1": {
-            "version": "latest",
-            "ppa": "false"
-        }
+		"ghcr.io/devcontainers/features/common-utils:2": {
+			"installZsh": "true",
+			"username": "group-14"
+		}
 	},
 	"customizations": {
 		"vscode": {
@@ -37,7 +28,8 @@
 				"EditorConfig.EditorConfig"
 			],
 			"settings": {
-				"python.defaultInterpreterPath": "/usr/local/bin/python"
+				"python.defaultInterpreterPath": "/usr/local/bin/python",
+				"terminal.integrated.defaultProfile.linux": "zsh"
 			}
 		}
 	},
