Add `pip install` command to `postStartCommand` in `devcontainer.json`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,7 +33,7 @@
 			}
 		}
 	},
-	"postStartCommand": "git lfs checkout",
+	"postStartCommand": "git lfs checkout ; pip install -r requirements.txt",
 
 	"remoteUser": "group-14"
 }
