--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,7 +20,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    if: contains(github.event.head_commit.message, '[Test]') || contains(github.event.head_commit.message, '[TEST]')
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
