--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,7 +18,7 @@ concurrency:
 
 jobs:
   build:
-
+    name: Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     if: contains(github.event.head_commit.message, '[Test]') || contains(github.event.head_commit.message, '[TEST]')
     steps:
