Added Pylint extension to `devcontainer.json`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,7 @@
 			"extensions": [
 				"eamodio.gitlens",
 				"ms-python.python",
+				"ms-python.pylint",
 				"vscode-icons-team.vscode-icons",
 				"mathematic.vscode-pdf",
 				"njpwerner.autodocstring",
