--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,19 @@
 {
 	"name": "F20CN Container",
-	"build": {
-		"dockerfile": "Dockerfile",
-		"context": "."
-	},
+
+	// Reference: https://github.com/devcontainers/images/tree/main/src/python
+	"image": "mcr.microsoft.com/devcontainers/python:3",
 	"features": {
 		"ghcr.io/devcontainers/features/common-utils:2": {
 			"installZsh": "true",
 			"username": "group-14"
-		}
+		},
+		"ghcr.io/devcontainers/features/git-lfs:1": {
+            "version": "latest"
+        },
+        "ghcr.io/devcontainers/features/github-cli:1": {
+            "version": "latest"
+        }
 	},
 	"customizations": {
 		"vscode": {
@@ -33,7 +38,7 @@
 			}
 		}
 	},
-	"postStartCommand": "git lfs checkout ; pip install -r requirements.txt",
+	"postStartCommand": "pip install -r requirements.txt",
 
 	"remoteUser": "group-14"
 }
