Add Python type checking mode to `settings.json`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
 	"diffEditor.ignoreTrimWhitespace": false,
 	"diffEditor.hideUnchangedRegions.enabled": true,
 	"audioCues.terminalCommandFailed": "on",
-	"audioCues.format": "userGesture"
+	"audioCues.format": "userGesture",
+	"python.analysis.typeCheckingMode": "basic",
 }
