--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,4 +18,7 @@
 	"audioCues.terminalCommandFailed": "on",
 	"audioCues.format": "userGesture",
 	"python.analysis.typeCheckingMode": "basic",
+	"python.testing.pytestArgs": ["."],
+	"python.testing.unittestEnabled": false,
+	"python.testing.pytestEnabled": true,
 }
