--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,11 +9,9 @@
 			"username": "group-14"
 		},
 		"ghcr.io/devcontainers/features/git-lfs:1": {
-			"version": "latest"
+			"version": "3.4"
 		},
-		"ghcr.io/devcontainers/features/github-cli:1": {
-			"version": "latest"
-		}
+		"ghcr.io/devcontainers/features/github-cli:1": {}
 	},
 	"customizations": {
 		"vscode": {
