Plays sound for saving only when user explicitly saves file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,7 @@
 		"sound": "on"
 	},
 	"accessibility.signals.save": {
-		"sound": "always"
+		"sound": "userGesture"
 	},
 	"accessibility.signals.format": {
 		"sound": "userGesture"
